增强解释器语法