@@ -15,6 +15,22 @@ public class Interpreter {
         }
     }
 
+    private static class BreakException extends RuntimeException {
+        public BreakException() {
+            super(null, null, false, false);
+        }
+    }
+
+    private static final BreakException BREAK_EXCEPTION = new BreakException();
+
+    private static class ContinueException extends RuntimeException {
+        public ContinueException() {
+            super(null, null, false, false);
+        }
+    }
+
+    private static final ContinueException CONTINUE_EXCEPTION = new ContinueException();
+
     private static class Environment {
         private final LinkedList<Map<String, Integer>> scopes = new LinkedList<>(List.of(new HashMap<>()));
 
@@ -60,11 +76,11 @@ public class Interpreter {
         }
     }
 
-    private interface ArithmeticExpression {
+    private interface ArithmeticExpr {
         int eval(Environment env);
     }
 
-    private static class Constant implements ArithmeticExpression {
+    private static class Constant implements ArithmeticExpr {
         private final int value;
 
         private Constant(int value) {
@@ -77,7 +93,7 @@ public class Interpreter {
         }
     }
 
-    private static class Var implements ArithmeticExpression {
+    private static class Var implements ArithmeticExpr {
         private final String varName;
 
         private Var(String varName) {
@@ -90,17 +106,17 @@ public class Interpreter {
         }
     }
 
-    private static abstract class BinaryArithmeticOp implements ArithmeticExpression {
-        protected final ArithmeticExpression lhs, rhs;
+    private static abstract class BinaryArithmeticOp implements ArithmeticExpr {
+        protected final ArithmeticExpr lhs, rhs;
 
-        protected BinaryArithmeticOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        protected BinaryArithmeticOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             this.lhs = lhs;
             this.rhs = rhs;
         }
     }
 
     private static class AddOp extends BinaryArithmeticOp {
-        public AddOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public AddOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -111,7 +127,7 @@ public class Interpreter {
     }
 
     private static class SubOp extends BinaryArithmeticOp {
-        public SubOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public SubOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -122,7 +138,7 @@ public class Interpreter {
     }
 
     private static class MulOp extends BinaryArithmeticOp {
-        public MulOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public MulOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -133,7 +149,7 @@ public class Interpreter {
     }
 
     private static class DivOp extends BinaryArithmeticOp {
-        public DivOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public DivOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -144,7 +160,7 @@ public class Interpreter {
     }
 
     private static class RemOp extends BinaryArithmeticOp {
-        public RemOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public RemOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -154,21 +170,21 @@ public class Interpreter {
         }
     }
 
-    private interface ConditionExpression {
+    private interface ConditionExpr {
         boolean eval(Environment env);
     }
 
-    private static abstract class BinaryCompareOp implements ConditionExpression {
-        protected final ArithmeticExpression lhs, rhs;
+    private static abstract class BinaryCompareOp implements ConditionExpr {
+        protected final ArithmeticExpr lhs, rhs;
 
-        protected BinaryCompareOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        protected BinaryCompareOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             this.lhs = lhs;
             this.rhs = rhs;
         }
     }
 
     private static class GreaterThanOp extends BinaryCompareOp {
-        public GreaterThanOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public GreaterThanOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -178,8 +194,19 @@ public class Interpreter {
         }
     }
 
+    private static class GreaterEqualThanOp extends BinaryCompareOp {
+        public GreaterEqualThanOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
+            super(lhs, rhs);
+        }
+
+        @Override
+        public boolean eval(Environment env) {
+            return lhs.eval(env) >= rhs.eval(env);
+        }
+    }
+
     private static class LessThanOp extends BinaryCompareOp {
-        public LessThanOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public LessThanOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -190,7 +217,7 @@ public class Interpreter {
     }
 
     private static class LessEqualThanOp extends BinaryCompareOp {
-        public LessEqualThanOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public LessEqualThanOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -201,7 +228,7 @@ public class Interpreter {
     }
 
     private static class EqualOp extends BinaryCompareOp {
-        public EqualOp(ArithmeticExpression lhs, ArithmeticExpression rhs) {
+        public EqualOp(ArithmeticExpr lhs, ArithmeticExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -211,17 +238,17 @@ public class Interpreter {
         }
     }
 
-    private static abstract class BinaryLoginOp implements ConditionExpression {
-        protected final ConditionExpression lhs, rhs;
+    private static abstract class BinaryLoginOp implements ConditionExpr {
+        protected final ConditionExpr lhs, rhs;
 
-        protected BinaryLoginOp(ConditionExpression lhs, ConditionExpression rhs) {
+        protected BinaryLoginOp(ConditionExpr lhs, ConditionExpr rhs) {
             this.lhs = lhs;
             this.rhs = rhs;
         }
     }
 
     private static class AndOp extends BinaryLoginOp {
-        public AndOp(ConditionExpression lhs, ConditionExpression rhs) {
+        public AndOp(ConditionExpr lhs, ConditionExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -232,7 +259,7 @@ public class Interpreter {
     }
 
     private static class OrOp extends BinaryLoginOp {
-        public OrOp(ConditionExpression lhs, ConditionExpression rhs) {
+        public OrOp(ConditionExpr lhs, ConditionExpr rhs) {
             super(lhs, rhs);
         }
 
@@ -242,15 +269,28 @@ public class Interpreter {
         }
     }
 
+    private static class NotOp implements ConditionExpr {
+        private final ConditionExpr e;
+
+        private NotOp(ConditionExpr e) {
+            this.e = e;
+        }
+
+        @Override
+        public boolean eval(Environment env) {
+            return !e.eval(env);
+        }
+    }
+
     private interface Statement {
         void execute(Environment env);
     }
 
     private static class VarDeclaration implements Statement {
         private final String varName;
-        private final ArithmeticExpression expr;
+        private final ArithmeticExpr expr;
 
-        private VarDeclaration(String varName, ArithmeticExpression expr) {
+        public VarDeclaration(String varName, ArithmeticExpr expr) {
             this.varName = varName;
             this.expr = expr;
         }
@@ -263,9 +303,9 @@ public class Interpreter {
 
     private static class VarAssign implements Statement {
         private final String varName;
-        private final ArithmeticExpression expr;
+        private final ArithmeticExpr expr;
 
-        private VarAssign(String varName, ArithmeticExpression expr) {
+        public VarAssign(String varName, ArithmeticExpr expr) {
             this.varName = varName;
             this.expr = expr;
         }
@@ -279,24 +319,27 @@ public class Interpreter {
     private static class Block implements Statement {
         private final List<Statement> stmts;
 
-        private Block(List<Statement> stmts) {
+        public Block(List<Statement> stmts) {
             this.stmts = stmts;
         }
 
         @Override
         public void execute(Environment env) {
             env.pushScope();
-            stmts.forEach(s -> s.execute(env));
-            env.popScope();
+            try {
+                stmts.forEach(s -> s.execute(env));
+            } finally {
+                env.popScope();
+            }
         }
     }
 
     private static class IfElse implements Statement {
-        private final ConditionExpression cond;
+        private final ConditionExpr cond;
         private final Statement trueBranch;
         private final Statement falseBranch;
 
-        private IfElse(ConditionExpression cond, Statement trueBranch, Statement falseBranch) {
+        public IfElse(ConditionExpr cond, Statement trueBranch, Statement falseBranch) {
             this.cond = cond;
             this.trueBranch = trueBranch;
             this.falseBranch = falseBranch;
@@ -314,11 +357,11 @@ public class Interpreter {
 
     private static class ForLoop implements Statement {
         private final Statement init;
-        private final ConditionExpression cond;
+        private final ConditionExpr cond;
         private final Statement update;
         private final Statement body;
 
-        private ForLoop(Statement init, ConditionExpression cond, Statement update, Statement body) {
+        public ForLoop(Statement init, ConditionExpr cond, Statement update, Statement body) {
             this.init = init;
             this.cond = cond;
             this.update = update;
@@ -329,9 +372,48 @@ public class Interpreter {
         public void execute(Environment env) {
             env.pushScope();
             for (init.execute(env); cond.eval(env); update.execute(env)) {
-                body.execute(env);
+                try {
+                    body.execute(env);
+                } catch (BreakException e) {
+                    break;
+                } catch (ContinueException e) {}
             }
             env.popScope();
+        }
+    }
+
+    private static class WhileLoop implements Statement {
+        private final ConditionExpr cond;
+        private final Statement body;
+
+        public WhileLoop(ConditionExpr cond, Statement body) {
+            this.cond = cond;
+            this.body = body;
+        }
+
+        @Override
+        public void execute(Environment env) {
+            while (cond.eval(env)) {
+                try {
+                    body.execute(env);
+                } catch (BreakException e) {
+                    break;
+                } catch (ContinueException e) {}
+            }
+        }
+    }
+
+    private static class Break implements Statement {
+        @Override
+        public void execute(Environment env) {
+            throw BREAK_EXCEPTION;
+        }
+    }
+
+    private static class Continue implements Statement {
+        @Override
+        public void execute(Environment env) {
+            throw CONTINUE_EXCEPTION;
         }
     }
 
@@ -351,11 +433,18 @@ public class Interpreter {
         }
     }
 
+    // 词法元素
     private static final Parser<Character> w = chs(' ', '\t', '\r', '\n');
     private static final Parser<List<Character>> ws = w.many();
     private static final Parser<Character> alpha = range('a', 'z').or(range('A', 'Z'));
     private static final Parser<Character> digit = range('0', '9');
     private static final Parser<Character> underline = ch('_');
+    private static final Parser<String> identifier = seq(
+            oneOf(alpha, underline),
+            oneOf(digit, alpha, underline).many(),
+            (a, b) -> a + join(b)
+    ).surroundBy(ws);
+    private static final Parser<String> integer = digit.many1().map(Interpreter::join).surroundBy(ws);
     private static final Parser<String> assign = string("=").surroundBy(ws);
     private static final Parser<String> semi = string(";").surroundBy(ws);
     private static final Parser<String> lp = string("(").surroundBy(ws);
@@ -368,42 +457,45 @@ public class Interpreter {
     private static final Parser<String> div = string("/").surroundBy(ws);
     private static final Parser<String> rem = string("%").surroundBy(ws);
     private static final Parser<String> gt = string(">").surroundBy(ws);
+    private static final Parser<String> get = string(">=").surroundBy(ws);
     private static final Parser<String> lt = string("<").surroundBy(ws);
     private static final Parser<String> let = string("<=").surroundBy(ws);
     private static final Parser<String> equ = string("==").surroundBy(ws);
     private static final Parser<String> and = string("&&").surroundBy(ws);
     private static final Parser<String> or = string("||").surroundBy(ws);
+    private static final Parser<String> not = string("!").surroundBy(ws);
     private static final Parser<String> var_ = string("var").surroundBy(ws);
     private static final Parser<String> if_ = string("if").surroundBy(ws);
     private static final Parser<String> else_ = string("else").surroundBy(ws);
     private static final Parser<String> for_ = string("for").surroundBy(ws);
-    private static final Parser<String> identifier = seq(
-            oneOf(alpha, underline),
-            oneOf(digit, alpha, underline).many(),
-            (a, b) -> a + join(b)
-    ).surroundBy(ws);
-    private static final Parser<String> integer =  digit.many1().map(Interpreter::join).surroundBy(ws);
+    private static final Parser<String> while_ = string("while").surroundBy(ws);
+    private static final Parser<String> break_ = string("break").surroundBy(ws);
+    private static final Parser<String> continue_ = string("continue").surroundBy(ws);
 
-    private static final Parser<ArithmeticExpression> constant = integer.map(n -> new Constant(Integer.parseInt(n)));
-    private static final Parser<ArithmeticExpression> var = identifier.map(Var::new);
-    private static final Parser<ArithmeticExpression> arithFact = oneOf(
+    // 表达式
+    private static final Parser<ArithmeticExpr> constant = integer.map(n -> new Constant(Integer.parseInt(n)));
+    private static final Parser<ArithmeticExpr> var = identifier.map(Var::new);
+    private static final Parser<ArithmeticExpr> arithFact = oneOf(
             constant,
             var,
             skip(lp).and(lazy(Interpreter::getArithExpr)).skip(rp)
     );
-    private static final Parser<ArithmeticExpression> arithTerm = separateBy(mul.or(div).or(rem), arithFact)
+    private static final Parser<ArithmeticExpr> arithTerm = separateBy(mul.or(div).or(rem), arithFact)
             .map(Interpreter::buildArithmeticExpr);
-    private static final Parser<ArithmeticExpression> arithExpr = separateBy(add.or(sub), arithTerm)
+    private static final Parser<ArithmeticExpr> arithExpr = separateBy(add.or(sub), arithTerm)
             .map(Interpreter::buildArithmeticExpr);
-    private static final Parser<ConditionExpression> compareExpr = seq(
-            arithExpr, let.or(lt).or(gt).or(equ), arithExpr,
+    private static final Parser<ConditionExpr> compareExpr = seq(
+            arithExpr, let.or(get).or(lt).or(gt).or(equ), arithExpr,
             (a, b, c) -> buildCompareExpr(b, a, c)
     );
-    private static final Parser<ConditionExpression> andExpr = separateBy(and, compareExpr).ignoreDelimiter()
-            .map(Interpreter::buildAndExpr);
-    private static final Parser<ConditionExpression> orExpr = separateBy(or, andExpr).ignoreDelimiter()
-            .map(Interpreter::buildOrExpr);
+    private static final Parser<ConditionExpr> condFact = oneOf(
+            compareExpr,
+            skip(not.and(lp)).and(lazy(Interpreter::getCondExpr)).skip(rp).map(Interpreter::buildNotExpr)
+    );
+    private static final Parser<ConditionExpr> condTerm = separateBy(and, condFact).map(Interpreter::buildConditionalExpr);
+    private static final Parser<ConditionExpr> condExpr = separateBy(or, condTerm).map(Interpreter::buildConditionalExpr);
 
+    // 语句
     private static final Parser<Statement> lazyStmt = lazy(Interpreter::getStmt);
     private static final Parser<Statement> varDeclareStmt = seq(
             var_, identifier, assign, arithExpr,
@@ -418,24 +510,35 @@ public class Interpreter {
             (a, b, c) -> new Block(b)
     );
     private static final Parser<Statement> ifelse = seq(
-            if_, lp, orExpr, rp, lazyStmt,
+            if_, lp, condExpr, rp, lazyStmt,
             optional(seq(else_, lazyStmt, (a, b) -> b)),
             (a, b, c, d, e, f) -> new IfElse(c, e, f)
     );
-    private static final Parser<Statement> forLoop = skip(for_.and(lp)).and(lazyStmt).skip(semi).and(orExpr).skip(semi).and(lazyStmt).skip(rp).and(lazyStmt)
+    private static final Parser<Statement> forLoop = skip(for_.and(lp)).and(lazyStmt).skip(semi).and(condExpr).skip(semi).and(lazyStmt).skip(rp).and(lazyStmt)
             .map(p -> new ForLoop(p.getFirst().getFirst().getFirst(), p.getFirst().getFirst().getSecond(), p.getFirst().getSecond(), p.getSecond()));
+    private static final Parser<Statement> whileLoop = skip(while_.and(lp)).and(condExpr).skip(rp).and(lazyStmt)
+            .map(p -> new WhileLoop(p.getFirst(), p.getSecond()));
+    private static final Parser<Statement> breakStmt = break_.map(Break::new);
+    private static final Parser<Statement> continueStmt = continue_.map(Continue::new);
     private static final Parser<Statement> stmt = oneOf(
             varDeclareStmt,
             varAssignStmt,
             block,
             ifelse,
-            forLoop
+            forLoop,
+            whileLoop,
+            breakStmt,
+            continueStmt
     );
 
     private static final Parser<Program> program = stmt.many().map(Program::new);
 
-    private static Parser<ArithmeticExpression> getArithExpr() {
+    private static Parser<ArithmeticExpr> getArithExpr() {
         return arithExpr;
+    }
+
+    private static Parser<ConditionExpr> getCondExpr() {
+        return condExpr;
     }
 
     private static Parser<Statement> getStmt() {
@@ -446,34 +549,36 @@ public class Interpreter {
         return list.stream().map(Objects::toString).collect(Collectors.joining());
     }
 
-    private static ArithmeticExpression buildArithmeticExpr(Pair<ArithmeticExpression, List<Pair<String, ArithmeticExpression>>> p) {
-        ArithmeticExpression e = p.getFirst();
-        for (Pair<String, ArithmeticExpression> pp : p.getSecond()) {
-            switch (pp.getFirst()) {
+    private static ArithmeticExpr buildArithmeticExpr(Pair<ArithmeticExpr, List<Pair<String, ArithmeticExpr>>> r) {
+        ArithmeticExpr expr = r.getFirst();
+        for (Pair<String, ArithmeticExpr> p : r.getSecond()) {
+            switch (p.getFirst()) {
                 case "+":
-                    e = new AddOp(e, pp.getSecond());
+                    expr = new AddOp(expr, p.getSecond());
                     break;
                 case "-":
-                    e = new SubOp(e, pp.getSecond());
+                    expr = new SubOp(expr, p.getSecond());
                     break;
                 case "*":
-                    e = new MulOp(e, pp.getSecond());
+                    expr = new MulOp(expr, p.getSecond());
                     break;
                 case "/":
-                    e = new DivOp(e, pp.getSecond());
+                    expr = new DivOp(expr, p.getSecond());
                     break;
                 case "%":
-                    e = new RemOp(e, pp.getSecond());
+                    expr = new RemOp(expr, p.getSecond());
                     break;
             }
         }
-        return e;
+        return expr;
     }
 
-    private static ConditionExpression buildCompareExpr(String op, ArithmeticExpression lhs, ArithmeticExpression rhs) {
+    private static ConditionExpr buildCompareExpr(String op, ArithmeticExpr lhs, ArithmeticExpr rhs) {
         switch (op) {
             case ">":
                 return new GreaterThanOp(lhs, rhs);
+            case ">=":
+                return new GreaterEqualThanOp(lhs, rhs);
             case "<":
                 return new LessThanOp(lhs, rhs);
             case "<=":
@@ -484,15 +589,26 @@ public class Interpreter {
         throw new RuntimeException("未知的比较运算符：" + op);
     }
 
-    private static ConditionExpression buildAndExpr(List<ConditionExpression> exprs) {
-        return exprs.stream().skip(1).reduce(exprs.get(0), AndOp::new);
+    private static ConditionExpr buildNotExpr(ConditionExpr expr) {
+        return new NotOp(expr);
     }
 
-    private static ConditionExpression buildOrExpr(List<ConditionExpression> exprs) {
-        return exprs.stream().skip(1).reduce(exprs.get(0), OrOp::new);
+    private static ConditionExpr buildConditionalExpr(Pair<ConditionExpr, List<Pair<String, ConditionExpr>>> r) {
+        ConditionExpr expr = r.getFirst();
+        for (Pair<String, ConditionExpr> p : r.getSecond()) {
+            switch (p.getFirst()) {
+                case "&&":
+                    expr = new AndOp(expr, p.getSecond());
+                    break;
+                case "||":
+                    expr = new OrOp(expr, p.getSecond());
+                    break;
+            }
+        }
+        return expr;
     }
 
-    public static Map<String, Integer> interpret(String s) {
-        return Interpreter.program.parse(s).run();
+    public static Map<String, Integer> run(String s) {
+        return program.parse(s).run();
     }
 }
